name:              yesodeneme
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Model.Snippet
                     Model.Activity
                     Widget.Editor
                     Widget.RunResult
                     Widget.Activities
                     Widget.LessonList
                     Widget.SubContent
                     Settings
                     Settings.StaticFiles
                     Settings.Environment
                     Handler.Common
                     Handler.Home
                     Handler.Run
                     Handler.Image
                     Handler.Account
                     Handler.Alert
                     Handler.About
                     Handler.NewActivity
                     Handler.Compose
                     Handler.Snippet
                     Handler.Save
                     Handler.CreateSnippet
                     Handler.Code
                     Handler.Snippets
                     Handler.Lesson
                     Handler.Problem
                     Handler.Print
                     Handler.LessonImage
                     Yesod.Auth.Simple
                     Util.Shakespare
                     Util.Slug
                     Util.User
                     Util.Hash
                     Util.Alert
                     Util.Handler
                     Util.Util


                     
                     

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          
                 , yesod                         >= 1.4.1      
                 , yesod-core                    >= 1.4.6      
                 , yesod-auth                    >= 1.4.0      
                 , yesod-static                  >= 1.4.0.3    
                 , yesod-form                    >= 1.4.0      
                 , yesod-markdown                >= 0.10.0     
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        
                 , text                          >= 0.11       
                 , persistent                    >= 2.0        
                 , persistent-postgresql         >= 2.1.1      
                 , persistent-template           >= 2.0        
                 , template-haskell
                 , shakespeare                   >= 2.0        
                 , hjsmin                        >= 0.1        
                 , monad-control                 >= 0.3        
                 , wai-extra                     >= 3.0        
                 , yaml                          >= 0.8        
                 , http-conduit                  >= 2.1        
                 , directory                     >= 1.1        
                 , warp                          >= 3.0        
                 , data-default
                 , aeson                         >= 0.6        
                 , conduit                       >= 1.0        
                 , monad-logger                  >= 0.3        
                 , fast-logger                   >= 2.2        
                 , wai-logger                    >= 2.2        
                 , wai                           >= 3.0        
                 , process
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , base64-bytestring             >= 1.0.0.0    
                 , base16-bytestring             >= 0.1.1.6    
                 , clientsession                 >= 0.9.0.3    
                 , email-validate                >= 2.0.1      
                 , pwstore-fast                  >= 2.4.1      
                 , cryptohash                    >= 0.11       
                 , http-types                    >= 0.8        
                 , blaze-html                    >= 0.7.1      
                 , blaze-markup                  >= 0.6.3      
                 , hailgun                       >= 0.4.0.3    
                 , uuid                          >= 1.3        
                 , regex-compat
                 , yesod-persistent
                 , iso8601-time   
                 , pandoc                        >= 1.9.0
                 , parsec                        <= 3.1.9

                 


executable         yesodeneme
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, yesodeneme

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , yesodeneme
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
